2017-05-15  Alan D. Salewski  <salewski@att.net>

	[github issue #9]:
	* src/main/bash/bin/screen-ls.in (SCREEN_VERSION_STRING) new global variable
	(f_is_screen_4_dot_3_or_newer): modified to set $SCREEN_VERSION_STRING (for now)
	(SCREEN_Q_LS_ESTAT_NO_SCREEN_SESSIONS): new variable
	(SCREEN_Q_LS_ESTAT_SCREEN_SESSIONS_PRESENT_MAX): new variable
	(SCREEN_Q_LS_ESTAT_SUCCESS_MIN): new variable
	(SCREEN_Q_LS_ESTAT_SUCCESS_MAX): new variable
	(re_no_sockets_found_loose): new variable (regex)
	(re_no_sockets_found_tight): new variable (regex)
	(DATA_SCREEN_Q_LS_OUTPUT): new variable; captures output of 'screen -q -ls'
	(t_screen_q_ls_estat): new variable; captures exit status of 'screen -q -ls'
	(DATA_SCREEN_LS_OUTPUT): new variable; captures output of 'screen -ls'
	(t_screen_ls_estat): new variable; captures exit status of 'screen -ls'
	(t_first_line): new variable; used for testing content of first
	line of output from 'screen -ls'
	* NEWS: noted above change

2017-05-14  Alan D. Salewski  <salewski@att.net>

	* src/main/bash/bin/screen-ls.in:
	- correct comment cruft (regexen are bash's, not sed's)
	- updated copyright dates (add current year (2017))

	* BUGS: direct user to project's GitHub issues page

2016-07-30  Alan D. Salewski  <salewski@att.net>

	* src/main/bash/bin/screen-ls.in: tweak comment in opt processing for ':'

	* NEWS: created empty news section for future 0.3.3 release
	* configure.ac: set version to 0.3.3-snapshot for next dev cycle
	* configure: regenerated
	* README.md:
	- referenced version 0.3.2 as "latest", etc
	- removed obsolete info about screen-wrappers working with bash < 4.x


	RELEASED screen-wrappers 0.3.2

	* configure.ac: set version to 0.3.2 for release
	* NEWS: set release date for screen-wrappers 0.3.2

	[github issue #8]:
	* autotools/install-sh: new upstream version of file
	* autotools/missing: new upstream version of file
	* NEWS: noted above change
	* configure: regenerated

	[github issue #6]: