@@ -686,10 +686,6 @@ re_no_sockets_found_tight='^'"${re_no_sockets_found_loose}"
 
 
 
-# The user would have to have a really pathological situation for the output
-# from 'screen -ls' to be large enough that we could not easily hold it all in
-# memory (if that describes you, though, then let the author know!).
-#
 # CAREFUL: Empirical testing (on screen version 4.00.03 (FAU) 23-Oct-06 and
 #          screen version 4.05.00 (GNU) 10-Dec-16) reveals that the '-q'
 #          option must come first for screen to exhibit the desired behavior
@@ -698,7 +694,7 @@ re_no_sockets_found_tight='^'"${re_no_sockets_found_loose}"
 #          second causes screen to exit with status 1 and otherwise behave in
 #          unexpected (and obviously incorrect) ways.
 #
-DATA_SCREEN_Q_LS_OUTPUT=$("${PROG_SCREEN}" -q -ls "${ARGS_FOR_SCREEN[@]}")
+"${PROG_SCREEN}" -q -ls "${ARGS_FOR_SCREEN[@]}"
 t_screen_q_ls_estat=$?
 
 # Per the commentary above, we are expecting the 'screen -q -ls' exit status
@@ -740,6 +736,10 @@ unset t_screen_q_ls_estat
 # scenario, even though we accounted for that in a more direct way above.
 
 
+# The user would have to have a really pathological situation for the output
+# from 'screen -ls' to be large enough that we could not easily hold it all in
+# memory (if that describes you, though, then let the author know!).
+#
 DATA_SCREEN_LS_OUTPUT=$("${PROG_SCREEN}" -ls "${ARGS_FOR_SCREEN[@]}")
 t_screen_ls_estat=$?
 # if test ${t_screen_ls_estat} -ne ${SCREEN_LS_ESTAT}; then  # screen prior to 4.3.0 exits with status 1; later versions exit with status 0 (as expected). We'll work with either.
